<resources>
    <string name="app_name">Gen</string>
    <string name="bem_vindo">Bem Vindo</string>
    <string name="login_para_continuar">Login para Continuar</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuario</string>
    <string name="login">Login</string>
    <string name="criar_conta">Criar conta</string>
    <string name="esqueceu_a_senha">Esqueceu a senha!</string>
    <string name="digite_os_dados_solictado_abaixo">Digite os dados solicitado abaixo</string>
    <string name="s_o_campos_obrigatorios">* são campos obrigatorios</string>
    <string name="full_name">Nome completo</string>
    <string name="email">Email</string>
    <string name="obrigatorio">*obrigatorio</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="tecnica">Tecnica</string>
    <string name="vistoria">Vistoria</string>
    <string name="bemvindo">Bem Vindo, %1$s</string>
    <string name="login_input_error_invalid_userid">Usuario Inválido</string>
    <string name="login_input_error_invalid_password">Senha inválida</string>
</resources>